# companionOS

./: .gitignore  README.md
.github/workflows/: build-and-deploy.yml
bootstrap/: Dockerfile  main.py  startup.json.default
bootstrap/bootstrap/: bootstrap.py
core/: Dockerfile  run-service.sh  start-coratiaos.sh
core/compose/: compose.yml
core/configuration/nginx/: coratiaos.conf
core/frontend/: index.html  package-lock.json  package.json  vite.config.js
core/frontend/src/: App.vue
core/frontend/src/assets/: main.css
core/frontend/src/router/: index.js
core/frontend/src/views/: DashboardView.vue  EndpointsView.vue  ExtensionsView.vue  FilesView.vue  LogsView.vue  NetworkView.vue  ParametersView.vue  SystemView.vue  TerminalView.vue  VehicleView.vue  VersionView.vue  VideoView.vue
core/libs/bridges/: pyproject.toml
core/libs/bridges/src/bridges/: __init__.py  serial_helper.py
core/libs/commonwealth/: pyproject.toml
core/libs/commonwealth/src/commonwealth/: __init__.py  api_utils.py  mavlink_comm.py  settings_manager.py
core/services/ardupilot_manager/: main.py
core/services/cable_guy/: main.py
core/services/commander/: main.py
core/services/file_browser/: main.py
core/services/helper/: main.py
core/services/kraken/: main.py
core/services/log_manager/: main.py
core/services/nmea_injector/: main.py
core/services/version_chooser/: main.py
core/services/video_manager/: main.py
core/services/wifi_manager/: main.py
docs/: architecture.md  deployment.md  developer-guide.md
install/: install.sh
